initial variables and config

--- a/config.ini
+++ b/config.ini
@@ -21,10 +21,9 @@ Interval = 1d
 Symbol = BTCUSDT
 Base = BTC
 Quote = USDT
-CommissionFeeRate = 0.001
+CommissionFee = 0.001
 StepSize = 5
 BrickSize = 970
 
 [risk]
 PositionRisk = 0.02
-MarginRatio = 1
