initialization of renko and adding first brick.

--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,9 @@ Base = BTC
 Quote = USDT
 CommissionFee = 0.001
 StepSize = 5
-BrickSize = 970
+BrickSize = 748
+InitialBrickOpen = 47124
+InitialBrickClose = 46376
 
 [risk]
 PositionRisk = 0.02
