deployment bug fix

--- a/.github/workflows/pushtoec2.yml
+++ b/.github/workflows/pushtoec2.yml
@@ -16,6 +16,6 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
           SOURCE: "./"
-          REMOTE_HOST: "AWS_HOST"
-          REMOTE_USER: "AWS_USER"
+          REMOTE_HOST: ${{ secrets.AWS_HOST }}
+          REMOTE_USER: ${{ secrets.AWS_USER }}
           TARGET: "/opt/pi"
