app starting logic changed. Recreating db functionality added.

--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,9 @@ Quote = USDT
 CommissionFee = 0.001
 StepSize = 5
 BrickSize = 748
-InitialBrickOpen = 47124
-InitialBrickClose = 46376
+InitialBrickType = down
+InitialBrickOpen = 43872.17999999999
+InitialBrickClose = 43124.17999999999
 
 [risk]
 PositionRisk = 0.02
