--- a/config.ini
+++ b/config.ini
@@ -24,9 +24,9 @@ Quote = USDT
 CommissionFee = 0.001
 StepSize = 5
 BrickSize = 748
-InitialBrickType = down
-InitialBrickOpen = 43872.17999999999
-InitialBrickClose = 43124.17999999999
+InitialBrickType = up
+InitialBrickOpen = 41628.17999999999
+InitialBrickClose = 42376.17999999999
 
 [risk]
 PositionRisk = 0.02
