atr limit update

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ MarginMaxBorrowablePath = /sapi/v1/margin/maxBorrowable
 LogPath = logs
 
 [data]
-Interval = 1d
+Interval = 1h
 Symbol = BTCUSDT
 Base = BTC
 Quote = USDT
@@ -27,6 +27,7 @@ BrickSize = 748
 InitialBrickType = up
 InitialBrickOpen = 40880.17999999999
 InitialBrickClose = 41628.17999999999
+ATREntryLimit = 350
 
 [risk]
 PositionRisk = 0.02
