--- a/config.ini
+++ b/config.ini
@@ -23,11 +23,10 @@ Base = BTC
 Quote = USDT
 CommissionFee = 0.001
 StepSize = 5
-BrickSize = 748
-InitialBrickType = up
-InitialBrickOpen = 40880.17999999999
-InitialBrickClose = 41628.17999999999
-ATREntryLimit = 350
+BrickSize = 1907
+InitialBrickType = down
+InitialBrickOpen = 30523.18
+InitialBrickClose = 28616.18
 
 [risk]
 PositionRisk = 0.02
